fix issue with spacing in nav footer

--- a/sites/all/themes/s2015/sass/components/_navigation-footer.scss
+++ b/sites/all/themes/s2015/sass/components/_navigation-footer.scss
@@ -10,6 +10,6 @@
     }
   }
   .leaf {
-    @include rem-fallback(margin-bottom, 1.6rem);
+    @include rem-fallback(margin-bottom, 0.625rem);
   }
 }
